wishlist/wishlist-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist
  namespace: wishlist
  labels:
    app.kubernetes.io/name: wishlist
    app.kubernetes.io/component: wishlist-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wishlist
      app.kubernetes.io/component: wishlist-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wishlist
        app.kubernetes.io/component: wishlist-manager
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: wishlist
          image: cmintey/wishlist:v0.67.1
          ports:
            - containerPort: 3280
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - mountPath: /usr/src/app/uploads
              subPath: uploads
              name: config
            - mountPath: /usr/src/app/data
              subPath: data
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wishlist
