wishlist/wishlist-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wishlist
  namespace: wishlist
  labels:
    app.kubernetes.io/name: wishlist
    app.kubernetes.io/component: wishlist-manager
    app.kubernetes.io/managed-by: kubectl
spec:
  serviceName: wishlist
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wishlist
      app.kubernetes.io/component: wishlist-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wishlist
        app.kubernetes.io/component: wishlist-manager
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: wishlist
          image: cmintey/wishlist:latest
          ports:
            - containerPort: 3280
          volumeMounts:
            - mountPath: /usr/src/app/uploads
              subPath: uploads
              name: config
            - mountPath: /usr/src/app/data
              subPath: data
              name: config
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/wishlist
            server: 192.168.86.107
