wishlist/wishlist-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist
  namespace: wishlist
spec:
  selector:
    app: wishlist
  ports:
    - protocol: TCP
      port: 3280
      targetPort: 3280
