wishlist/wishlist-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wishlist
  namespace: wishlist
  labels:
    app.kubernetes.io/name: wishlist
    app.kubernetes.io/component: ingress
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wishlist.albinmedoc.se`)
      kind: Rule
      services:
        - name: wishlist
          port: 3280
